--- a/4DMod.vcxproj.filters
+++ b/4DMod.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="InventorySorter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="StateWorldSettings.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="info.json5" />
@@ -30,6 +33,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="InventorySorter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StateWorldSettings.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
