--- a/4DMod.vcxproj
+++ b/4DMod.vcxproj
@@ -93,10 +93,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="GameInterface.cpp" />
     <ClCompile Include="InventoryActions.cpp" />
     <ClCompile Include="InventorySorter.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PauseMenu.cpp" />
+    <ClCompile Include="SettingsMenu.cpp" />
     <ClCompile Include="StateWorldSettings.cpp" />
+    <ClCompile Include="WorldList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="info.json5" />
@@ -106,6 +110,7 @@
     <ClInclude Include="InventoryActions.h" />
     <ClInclude Include="InventorySorter.h" />
     <ClInclude Include="StateWorldSettings.h" />
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
