missing mod error

--- a/4DMod.vcxproj
+++ b/4DMod.vcxproj
@@ -95,6 +95,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CreateWorld.cpp" />
+    <ClCompile Include="ErrorHandling.cpp" />
     <ClCompile Include="GameInterface.cpp" />
     <ClCompile Include="InventoryActions.cpp" />
     <ClCompile Include="InventorySorter.cpp" />
