--- a/4DMod.vcxproj.filters
+++ b/4DMod.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="CreateWorld.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ErrorHandling.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="info.json5" />
