fix error handling

--- a/4DMod.vcxproj
+++ b/4DMod.vcxproj
@@ -103,6 +103,7 @@
     <ClCompile Include="PauseMenu.cpp" />
     <ClCompile Include="SettingsMenu.cpp" />
     <ClCompile Include="StateServerList.cpp" />
+    <ClCompile Include="StateWorldError.cpp" />
     <ClCompile Include="StateWorldSettings.cpp" />
     <ClCompile Include="WorldList.cpp" />
   </ItemGroup>
@@ -113,6 +114,7 @@
     <ClInclude Include="InventoryActions.h" />
     <ClInclude Include="InventorySorter.h" />
     <ClInclude Include="StateServerList.h" />
+    <ClInclude Include="StateWorldError.h" />
     <ClInclude Include="StateWorldSettings.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
